fabric-samples/full-stack-asset-transfer-guide/infrastructure/sample-network/scripts/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/frontend:latest
          ports:
            - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80


  # kubectl create secret generic client-secret --from-file=keyPath=/home/ramdisk/my-full-stack/infrastructure/sample-network/temp/enrollments/Airtel/users/Airteluser/msp/keystore/key.pem --from-file=certPath=/home/ramdisk/my-full-stack/infrastructure/sample-network/temp/enrollments/Airtel/users/Airteluser/msp/signcerts/cert.pem --from-file=tlsCertPath=/home/ramdisk/my-full-stack/infrastructure/sample-network/temp/channel-msp/peerOrganizations/Airtel/msp/tlscacerts/tlsca-signcert.pem -n test-net [...]
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 60s
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  # labels:
  #   app: frontend
  #   app.kubernetes.io/instance: fabricpeer
  #   app.kubernetes.io/managed-by: fabric-operator
  #   app.kubernetes.io/name: fabric
  #   creator: fabric
  #   orgname: AirtelMSP
spec:
  ingressClassName: nginx
  rules:
    - host: frontend.localho.st
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - restapi.localho.st
